tests/NormalTests/paczka2/big_fuzzy/74648648.err
Error in line 2: FYXgFLPfXj S513 70,,
Error in line 1: qFM S334 30,5
Error in line 3: qFM S513 80,9
Error in line 7: qFM S191 -5,5
Error in line 9: qFM S191 376,2
Error in line 25: 3GvssjQQj A508 99,6
Error in line 24: MokmU S334 77,3
Error in line 33: qFM S513 38,6
Error in line 32: MokmU S513 85,0
Error in line 56: A508 S191 44,5
Error in line 49: 2at4Dq4 A508 26,0
Error in line 58: 2at4Dq4 S513 10,7
Error in line 57: A508 A508 19,3
Error in line 60: 2at4Dq4 S191 9,5
Error in line 68: 2at4Dq4 A5"8 336,"
Error in line 67: 2at4Dq4 A508 67,2
Error in line 19: FYXgFLPfXj S191 16,4
Error in line 73: A508 S513 99,0
Error in line 70: 2at4Dq4 S334 24,8
Error in line 65: MokmU A508 81,2
Error in line 86: qFM A508 97,7
Error in line 89: A508 S191 37,6
Error in line 106: qFM S513 45,4
Error in line 105: 129c4XOrK S513 71,6
Error in line 109: 3GvssjQQj A508 29,7
Error in line 114: 2at4Dq4 S191 86,5
Error in line 123: 2at4Dq4 S513 16,4
Error in line 121: 3GvssjQQj S513 44,8
Error in line 132: MokmU S513 -3,4
Error in line 134: qFM S334 83,6
Error in line 140: 129c4XOrK S191 76,4
Error in line 128: MokmU S513 88,1
Error in line 145: MokmU S191 65,9
Error in line 155: FYXgFLPfXj S513 57,2
Error in line 172: qFM S513 50,1
Error in line 162: A508 S513 368,0
Error in line 180: qFM S334 16,0
Error in line 195: A508 S513 255,7
Error in line 202: MokmU S191 25,9
Error in line 194: 129c4XOrK S334 35,4
Error in line 213: FYXgFLPfXj A508 -1,2
Error in line 216: FYXgFLPfXj S513 3,91
Error in line 219: FYXgFLPfXj S513 9,2
Error in line 221: FYXgFLPfXj A508 97,6
Error in line 224: FYXgFLPfXj S513 88,7
Error in line 226: 2at4Dq4 A508 46,9
Error in line 236: FYXgFLPfXj S334 137,8
Error in line 239: qFM A508 92,7
Error in line 244: 129c4XOrK S513 85,1
Error in line 247: 129c4XOrK A508 54,0
